<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="alipay_app_name">支付宝 SDK Demo</string>
    <string name="alipay_demo_info_text">重要说明: \n\n本 Demo 为了方便向商户展示支付宝的支付流程，所以订单信息的加签过程放在客户端完成。\n在商户的真实App内，为了防止商户私密数据泄露，引发资金损失和身份冒用等各种安全风险，商户私钥 RSA_PRIVATE 等数据严禁放在客户端，订单信息的加签过程也务必放在服务端完成。\n若商户接入时不遵照此说明而造成损失，需自行承担。</string>
    <string name="alipay_pay_with_alipay">支付宝支付 Demo</string>
    <string name="alipay_pay_with_alipay_hk">HK 支付宝支付 Demo</string>
    <string name="alipay_auth_with_alipay">支付宝授权 Demo</string>
    <string name="alipay_web_to_native">网页支付转 native 支付 Demo</string>
    <string name="alipay_check_sdk_version">支付宝 SDK 版本</string>
    <string name="alipay_pay_success">支付成功:</string>
    <string name="alipay_pay_failed">支付失败:</string>
    <string name="alipay_auth_success">授权成功:</string>
    <string name="alipay_auth_failed">授权失败:</string>
    <string name="alipay_error_missing_appid_rsa_private">错误: 需要配置 PayDemoActivity 中的 APPID 和 RSA_PRIVATE</string>
    <string name="alipay_error_missing_hk_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_HK 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="alipay_pay_result">支付结果:</string>
    <string name="alipay_error_auth_missing_partner_appid_rsa_private_target_id">错误: 需要配置PARTNER |APP_ID| RSA_PRIVATE| TARGET_ID</string>
    <string name="alipay_alipay_sdk_version_is">支付宝 SDK 版本:</string>
    <string name="alipay_confirm">确定</string>
    <string name="alipay_error_missing_h5_pay_url">必须配置需要打开的url 站点，请在PayDemoActivity类的h5Pay中配置</string>
    <string name="alipay_error">错误</string>
    <string name="alipay_pay_cross_border">境外收单支付 Demo</string>
    <string name="alipay_error_missing_global_partner_seller_rsa_private">错误：需要配置 OrderUtils1_0_Global 中的 PARTNER、SELLER 和 RSA_PRIVATE</string>
    <string name="alipay_payment_inst_hk">付款方: HK</string>
    <string name="alipay_payment_inst_cn">付款方: CN</string>
</resources>