<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/payV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="payV2"
            android:text="@string/alipay_pay_with_alipay"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/authV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="authV2"
            android:text="@string/alipay_auth_with_alipay"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/h5pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="h5Pay"
            android:text="@string/alipay_web_to_native"
            android:textAllCaps="false" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="showSdkVersion"
            android:text="@string/alipay_check_sdk_version"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/alipay_demo_info_text"
            android:textColor="#F4333C" />
    </LinearLayout>

</ScrollView>